Dark mode fix and error msg fix

--- a/src/components/BMDashboard/RentalChart/ReturnedLateChart.module.css
+++ b/src/components/BMDashboard/RentalChart/ReturnedLateChart.module.css
@@ -1,5 +1,6 @@
 .returned-late-chart {
   padding: 20px;
+  color: unset !important;
 }
 
 .returned-late-chart h1 {
@@ -34,6 +35,8 @@
   border: 1px solid #ccc;
   border-radius: 4px;
   font-size: 14px;
+  
+  
 }
 
 .returned-late-tools-select {
@@ -78,4 +81,26 @@
   font-size: 16px;
   color: #666;
   font-style: italic;
+}
+
+.background-dark {
+  background-color: rgb(42, 63, 95) !important;
+  border: 1px solid #555;
+}
+.background-dark div {
+  background-color: rgb(42, 63, 95) !important;
+ }
+.background-dark div:hover{
+  border:none !important;
+}
+.multi-select {
+  --rmsc-main: #4285f4;
+  --rmsc-hover: red;
+  --rmsc-selected: green;
+  --rmsc-border: #ccc;
+  --rmsc-gray: #aaa;
+  --rmsc-bg: #fff;
+  --rmsc-p: 10px; /* Spacing */
+  --rmsc-radius: 4px; /* Radius */
+  --rmsc-h: 38px; /* Height */
 }
